Re-ordering some stuff.

--- a/_/scss/base/_mixins.scss
+++ b/_/scss/base/_mixins.scss
@@ -26,11 +26,11 @@
 
 	@font-face {
 		font-family: $fontName;
-		src: url("/_/css/fonts/" + $fontLongname + "/" + $fontLongname + ".eot");
-		src: url("/_/css/fonts/" + $fontLongname + "/" + $fontLongname + ".eot?#iefix") format("embedded-opentype"),
-			 url("/_/css/fonts/" + $fontLongname + "/" + $fontLongname + ".woff") format("woff"),
-			 url("/_/css/fonts/" + $fontLongname + "/" + $fontLongname + ".ttf") format("truetype"),
-			 url("/_/css/fonts/" + $fontLongname + "/" + $fontLongname + ".svg#" + $fontName + "") format("svg");
+		src: url("../fonts/" + $fontLongname + "/" + $fontLongname + ".eot");
+		src: url("../fonts/" + $fontLongname + "/" + $fontLongname + ".eot?#iefix") format("embedded-opentype"),
+			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".woff") format("woff"),
+			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".ttf") format("truetype"),
+			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".svg#" + $fontName + "") format("svg");
 	}	
 }
 
@@ -154,6 +154,16 @@
 			border#{-$side}: ($width / 10)+rem $style $color;
 		}
     }
+}
+
+
+//----------------------------------------------------------------
+//	Transition
+//----------------------------------------------------------------
+@mixin trans($effect...) {
+	-webkit-transition: $effect;
+	   -moz-transition: $effect;
+			transition: $effect;
 }
 
 
