--- a/_/scss/base/_variables.scss
+++ b/_/scss/base/_variables.scss
@@ -8,22 +8,22 @@ $pxSupport: 			"false";
 
 
 //----------------------------------------------------------------
-//	Grid
+//	Grid Variables
 //----------------------------------------------------------------
 // * Values are in pixels for the sake of ease, but everything will 
 //   output in rem's. There will be pixel values added too, as a 
 //   fallback if $pxSupport is set to 'true'.
-$rowWidth: 				1200; 	// * 
-$columnGutter: 			40;		// *
+$rowWidth: 				1240; 	// * 
+$columnGutter: 			50;		// *
 $totalColumns: 			12;
 
 $defaultFloat: 			left;
 $oppositeDirection: 	right;
 
 // Screen Size Name: 	"kick-in" size;
-$smallScreen:			641;
-$mediumScreen:			769;
-$largeScreen: 			1025;
+$smallScreen:			640;
+$mediumScreen:			768;
+$largeScreen: 			1024;
 
 
 //----------------------------------------------------------------
