--- a/_/scss/style.scss
+++ b/_/scss/style.scss
@@ -15,7 +15,7 @@
 @import "base/_grid.scss";
 @import "base/_common.scss";
 @import "base/_forms.scss";
-@import "base/_tables.scss";
+//@import "base/_tables.scss";
 
 
 // VENDOR 
@@ -31,4 +31,4 @@
 
 // REGIONS
 // ---------------------------------------------------------
-//@import "regions/_homepage.scss";
+//@import "regions/_home.scss";
