--- a/_/scss/base/_mixins.scss
+++ b/_/scss/base/_mixins.scss
@@ -4,14 +4,14 @@
 //  Written as: @include fontSize(16);
 @mixin fontSize($value) {
 
-    @if $pxSupport == "true" {
-    	font-size: ($value) + px;
+	@if $pxSupport == "true" {
+		font-size: ($value) + px;
 		font-size: ($value / 10) + rem;
-    }
+	}
 
-    @else {
+	@else {
 		font-size: ($value / 10) + rem;
-    }
+	}
 }
 
 
@@ -22,16 +22,16 @@
 //  provided by the foundry that you are using.
 //
 //  Written as: @include font(Open Sans, open-sans);
-@mixin font($fontName, $fontLongname) {
+@mixin font($fontName, $fontFileName) {
 
 	@font-face {
 		font-family: $fontName;
-		src: url("../fonts/" + $fontLongname + "/" + $fontLongname + ".eot");
-		src: url("../fonts/" + $fontLongname + "/" + $fontLongname + ".eot?#iefix") format("embedded-opentype"),
-			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".woff") format("woff"),
-			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".ttf") format("truetype"),
-			 url("../fonts/" + $fontLongname + "/" + $fontLongname + ".svg#" + $fontName + "") format("svg");
-	}	
+		src: url("../fonts/" + $fontFileName + "/" + $fontFileName + ".eot");
+		src: url("../fonts/" + $fontFileName + "/" + $fontFileName + ".eot?#iefix") format("embedded-opentype"),
+			 url("../fonts/" + $fontFileName + "/" + $fontFileName + ".woff") format("woff"),
+			 url("../fonts/" + $fontFileName + "/" + $fontFileName + ".ttf") format("truetype"),
+			 url("../fonts/" + $fontFileName + "/" + $fontFileName + ".svg#" + $fontName + "") format("svg");
+	}
 }
 
 
@@ -67,19 +67,19 @@
 	}
 
 	@if $pxSupport == "true" {
-    	-webkit-border-radius: $pxValues;
-	   	   -moz-border-radius: $pxValues;
+		-webkit-border-radius: $pxValues;
+		   -moz-border-radius: $pxValues;
 				border-radius: $pxValues;
 		-webkit-border-radius: $remValues;
-	   	   -moz-border-radius: $remValues;
+		   -moz-border-radius: $remValues;
 				border-radius: $remValues;
-    }
+	}
 
-    @else {
+	@else {
 		-webkit-border-radius: $remValues;
-	   	   -moz-border-radius: $remValues;
+		   -moz-border-radius: $remValues;
 				border-radius: $remValues;
-    }
+	}
 }
 
 
@@ -103,7 +103,7 @@
 		@if $i < $max {
 			$pxValues: #{$pxValues + " "};
 		}
-	} 
+	}
 
 	@for $i from 1 through $max {
 		$value: prop-count(nth($values, $i));
@@ -115,13 +115,13 @@
 	}
 
 	@if $pxSupport == "true" {
-    	#{$styleProperty}: $pxValues; 
+		#{$styleProperty}: $pxValues; 
 		#{$styleProperty}: $remValues; 
-    }
+	}
 
-    @else {
+	@else {
 		#{$styleProperty}: $remValues; 
-    }
+	}
 }
 
 
@@ -132,8 +132,8 @@
 @mixin border($width, $style, $color, $side:"false") {
 
 	@if $pxSupport == "true" {
-    	
-    	@if $side == "false" {
+		
+		@if $side == "false" {
 			border: ($width)+px $style $color;
 			border: ($width / 10)+rem $style $color;
 		}
@@ -142,9 +142,9 @@
 			border#{-$side}: ($width)+px $style $color;
 			border#{-$side}: ($width / 10)+rem $style $color;
 		}
-    }
+	}
 
-    @else {
+	@else {
 		
 		@if $side == "false" {
 			border: ($width / 10)+rem $style $color;
@@ -153,7 +153,7 @@
 		@else {
 			border#{-$side}: ($width / 10)+rem $style $color;
 		}
-    }
+	}
 }
 
 
@@ -172,16 +172,16 @@
 //----------------------------------------------------------------
 @mixin sq($value) {
 	@if $pxSupport == "true" {
-    	width: ($value)+px; 
+		width: ($value)+px; 
 		width: ($value / 10)+rem;
 		height: ($value)+px; 
 		height: ($value / 10)+rem; 
-    }
+	}
 
-    @else {
+	@else {
 		width: ($value / 10)+rem;
 		height: ($value / 10)+rem; 
-    }
+	}
 }
 
 
@@ -191,7 +191,6 @@
 //  Written as: @include pre(transition, color 0.3s ease); OR @include pre(border-radius, 50%);
 @mixin pre($attr, $value) {
 	-webkit-#{$attr}: $value;
-   	   -moz-#{$attr}: $value;
-   	    -ms-#{$attr}: $value;
+	   -moz-#{$attr}: $value;
 			#{$attr}: $value;
 }
