Slight compiler changes.

--- a/_/scss/base/_typography.scss
+++ b/_/scss/base/_typography.scss
@@ -80,29 +80,25 @@ ol {
 	}
 }
 
-/*
 // These are some less used typography elements.
+// pre,
+// code {
+// }
 
-pre,
-code {
-}
+// dl {
+// }
 
-dl {
-}
+// dt {
+// }
 
-dt {
-}
+// dd {
+// }
 
-dd {
-}
+// blockquote {
+// }
 
-blockquote {
-}
+// q {
+// }
 
-q {
-}
-
-cite {
-}
-
-*/
+// cite {
+// }
